--- a/Prof-Bruno/homeHost/css/style.css
+++ b/Prof-Bruno/homeHost/css/style.css
@@ -1,7 +1,105 @@
 @charset "UTF-8";
 
-*{
+body, textarea{
     margin: 0;
     padding: 0;
+    font-family: "Montserrat", Arial, Helvetica, sans-serif;
+}
+
+h1, h2, h3{
+    color: #333;
+}
+
+p{
+    color: #70747A;
+}
+
+.navbar-container{
+    width: 100%;
+    height: 80px;
+    background-color: #232A31;
+    padding: 0 2em;
     box-sizing: border-box;
+    position: relative;
+}
+
+.logo{
+    width: 50px;
+    margin-top: 15px;
+}
+
+nav{
+    position: relative;
+}
+
+.navbar-items{
+    position: absolute;
+    right: 0;
+    top: 0;
+    height: 80px;
+    margin: 0;
+    line-height: 80px;
+}
+
+.navbar-items li{
+    display: inline-block;
+    text-transform: uppercase;
+    margin-left: 25px;
+}
+
+.navbar-items li a{
+    color: #fff;
+    text-decoration: none;
+    transition: 1.5s;
+}
+
+.navbar-items li a:hover {
+    color: #ccc;
+}
+
+.defaulf-btn{
+    padding: 15px 20px;
+    background-color: #2CC76A;
+    border-radius: 10px;
+}
+
+.defaulf-btn:hover{
+    background-color: #3d9c63;
+}
+
+.main-banner{
+    margin: 0;
+    padding: 0;
+    background-image: url(../img/mainbanner.png);
+    background-size: cover;
+    background-position: center;
+    padding: 10em 0;
+    text-align: center;
+}
+
+.main-banner h1, .main-banner p{
+    color: #fff;
+    font-weight: bold;
+}
+
+.main-banner h1{
+    font-size: 54px;
+}
+
+.main-banner p{
+    font-size: 32px;
+}
+
+/* Especialidades */
+
+.specialties-container{
+    padding: 5em 0;
+}
+
+.specialties-container ul{
+    display: flex;
+    width: 100%;
+    width: 90%;
+    margin: 0 auto;
+    list-style: none;
 }
