--- a/Prof-Arley/SuperMarioBross/css/style.css
+++ b/Prof-Arley/SuperMarioBross/css/style.css
@@ -351,20 +351,30 @@ footer{
     color: #ffff;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 1050px) and (min-width: 768px) {
     .personagem{
         flex-wrap: wrap;
     }
 
     .mario-games__vdo{
-        width: 700px;
-        height: 300;
+        width: 90%;
+        height: auto;
+    }
+
+    .mario-games__vdo iframe{
+        width: 100%;
+        height: 350px;
+    }
+
+    .mario-games__text{
+        width: 90%;
     }
 }
 
-@media only screen and (max-width: 360px) {
+
+@media only screen and (max-width: 767px) {
     :root{
-        font-size: 8.5px;
+        font-size: 16px;
     }
 
     header{
@@ -391,10 +401,24 @@ footer{
         margin: 0 auto;
         text-align: center;
         margin: 0 2rem;
+        flex-direction: column;
+    }
+
+    .personagem:nth-child(even){
+        flex-direction: column;
     }
 
     .personagem__image{
+        width: 100%;
         margin-top: 5rem;
+    }
+
+    .personagem__image img{
+        width: 50%;
+    }
+
+    .personagem__text{
+        width: 80%;
     }
 
     .personagem__btn{
@@ -407,7 +431,7 @@ footer{
     .mario-games{
         margin: 0 auto;
         text-align: center;
-        margin: 0 2rem;
+        margin: 0 2rem 0 2rem;
     }
 
     .mario-games__title{
@@ -420,8 +444,13 @@ footer{
     }
 
     .mario-games__vdo{
+        width: 90%;
+        height: 300px;
+    }
+
+    .mario-games__vdo iframe{
         width: 100%;
-        height: 40%;
+        height: 100%;
     }
 
     .mario-games__text{
