--- a/Prof-Arley/PrjPizzaria/css/style.css
+++ b/Prof-Arley/PrjPizzaria/css/style.css
@@ -1,17 +1,3 @@
-:root{
-    --font-size: 16px;
-
-    --color--black: #000000;
-    --color--dark-gray: #D9D9D9;
-    --color--light-gray: #EEEEEE;
-    --color--white: #ffffff;
-    --color--baby-blue: #E5F4FF;
-    --color--blue: #1298F8;
-
-    --color--green: #48D05F; /* Success */
-    --color--red: #E92929; /* Attention */
-}
-
 /* Fontes */
 
 @font-face {
@@ -60,7 +46,7 @@
 .pizzas-card__item{
     display: flex;
     width: 349px;
-    height: 556px;
+    height: 400px;
     padding: 128px 8px;
     flex-direction: column;
     justify-content: center;
@@ -82,88 +68,184 @@
     color: var(--color--blue);
 }
 
+.pizzas-cards__preco{
+    font-family: "interlight";
+    font-size: 24px ;
+}
+
+.pizzas-cards__titulo{
+    font-family: "interbold";
+    font-weight: bold;
+    font-size: 24px;
+}
+
+.pizzas-cards__texto{
+    font-family: "interlight";
+    font-size: 16px;
+}
+
 /* Modal */
 
-.background-modal{
+.background-modal {
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.5);
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 999;
+    visibility: hidden;
+    opacity:0;
     display: flex;
-    align-items: center;
     justify-content: center;
-    padding: 1rem;
-    gap: 1rem;
+    align-items: center;
+    transition: opacity 0.5s ease;
 }
-
-.modal-pizza{
-    width: 874px;
-    height: 446px;
+ 
+.background-modal:target {
+    visibility: visible;
+    opacity: 1;
+}
+ 
+ 
+.modal-pizza {
+    /* position: absolute;
+    left: calc(50vw - 316px);
+    top: calc(50vh - 160px); */
+    width: 600px;    
+    min-width: 600px;
+    background-color: #FFF;
+    border-radius: 20px;
+    box-shadow: 0px 8px 32px 0px rgba(0, 0, 0, 0.25);
     display: flex;
-    align-items: center;
     justify-content: center;
-    gap: 2rem;
-    padding: 1rem;
-
-    border-radius: 25px;
-    background: #FFF;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.25);
+    align-items: center;
+    gap: 32px;
+    padding: 32px 16px;
 }
-
-.modal-pizza__img{
+ 
+.modal-pizza__btn-fechar {    
+    display:block;
+    width:32px;
+    padding:8px;
+    text-align: center;    
+    align-self: flex-end;
+    color: #aaa;
+    font-size: 0.75rem;    
+    text-decoration: none;
+}
+ 
+.modal-pizza__btn-fechar:hover {
+    color: #bcc;
+}
+ 
+ 
+.modal-pizza__img {
     width: 200px;
+    height: 200px;
 }
-
-.modal-pizza__detalhes{
+ 
+.modal-pizza__detalhes {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    gap: 2rem;
+    gap: 16px;
 }
-
-.modal-pizza__btn-fechar{
-    position: relative;
-    right: -350px;
+ 
+.modal-pizza__tx-titulo {
+    font-family: "InterBold";
+    font-size: 2rem;
 }
-
-.modal-pizza__tx-titulo{
-    font-family: "interBold";
-    font-size: 1.5rem;
-}
-
-.modal-pizza__tx-ingredientes{
-    font-family: "interRegular";
-    font-size: 1rem;
-}
-
-.modal-pizza__tx-tamanho{
-    font-family: "interRegular";
+ 
+.modal-pizza__tx-preco,
+.modal-pizza__tx-tamanho {
+    font-family: "InterLight";
     font-size: 1rem;
     text-transform: uppercase;
 }
-
-.modal-pizza__controle-tamanhos{
+ 
+.modal-pizza__preco {
+    display: flex;
+}
+ 
+ 
+.modal-pizza__controle-tamanhos {
     display: flex;
     justify-content: center;
-    align-items: flex-start;
-    gap: 2rem;
+    font-family: "InterBold";
+    font-size: 1rem;
+    text-transform: uppercase;
+    /* padding: 0 8px; */
+    /*não colocar - demonstrar */
+ 
+    background-color: #eee;
+    border-radius: 16px;
+    overflow: hidden;
+}
+ 
+.modal-pizza__tamanho {
     padding: 8px;
-
-    border-radius: 16px 16px 16px 16px;
-    background-color: var(--color--light-gray);
+    cursor: pointer;
 }
-
-.modal-pizza__tx-preco{
-    font-family: "interRegular";
+ 
+.modal-pizza__tamanho:hover {
+    background-color: #1298F8;
 }
-
-.modal-pizza__qtd{
+ 
+.modal-pizza__tamanho--ativo {
+    background-color: #1298F8;
+}
+ 
+.modal-pizza__tamanho span {
+    font-family: "InterLight";
+    font-size: 0.75rem;
+}
+ 
+.modal-pizza__qtd {
     display: flex;
-    gap: 1rem;
+    align-items: center;
+    gap: 16px;
 }
-
-.modal-pizza__tx-valor{
-    font-family: "interRegular";
-    font-weight: 700;
-    font-size: 1.5rem;
-}
-
-.modal-pizza__controle-qtd{
+ 
+.modal-pizza__controle-qtd {
     display: flex;
+    border-radius: 16px;
+    width: 64px;
+    padding: 0px 8px;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    background-color: #EEE;
+}
+ 
+.modal-pizza__menos,
+.modal-pizza__mais {
+    cursor: pointer;
+    padding: 0px 10px;
+    color: #333;
+    border: 0;
+    background-color: transparent;
+    font-size: 16px;
+}
+ 
+.modal-pizza__btns {
+    display: flex;
+    gap: 16px;
+}
+ 
+.modal-pizza__btn {
+    padding: 8px 16px;
+    border-radius: 16px;
+    color: #fff;
+    border: none;
+    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
+}
+ 
+.modal-pizza__btn--adicionar {
+    background-color: #48D05F;
+    cursor: pointer;
+}
+ 
+.modal-pizza__btn--cancelar {
+    background-color: #E92929;
+    cursor: pointer;
 }
