--- a/Prof-Arley/PrjPizzaria/css/style.css
+++ b/Prof-Arley/PrjPizzaria/css/style.css
@@ -15,6 +15,10 @@
     src: url(../fontes/InterLight.ttf);
 }
 
+main{
+    position: relative;
+}
+
 /* Header */
 
 .topo{
@@ -34,13 +38,19 @@
     color: var(--color--blue);
 }
 
+/* Conteudo Principal */
+
+.conteudo{
+    display: flex;
+}
+
 /* Pizza Card */
 
 .pizza-cards{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    gap: 104px;
+    gap: 50px;
 }
 
 .pizzas-card__item{
@@ -244,8 +254,27 @@
     background-color: #48D05F;
     cursor: pointer;
 }
+
+.modal-pizza__btn--adicionar a{
+    color: #ffffff;
+    text-decoration: none;
+}
  
 .modal-pizza__btn--cancelar {
     background-color: #E92929;
     cursor: pointer;
+}
+
+/* Footer */
+
+footer{
+    display: flex;
+    height: 144px;
+    justify-content: center;
+    align-items: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    background-color: var(--color--baby-blue);
+    text-align: center;
+    font-family: "interRegular";
 }
