--- a/Prof-Arley/PrjPizzaria/css/reset.css
+++ b/Prof-Arley/PrjPizzaria/css/reset.css
@@ -29,7 +29,8 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
-	line-height: 1;
+	line-height: 1.5rem;
+	box-sizing: border-box;
 }
 ol, ul {
 	list-style: none;
